tests/error/0_size_variable.gw
void this_won_t_work;
